NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Last_Update__c.field-meta.xml
<CustomField>
    <fullName>NATT_Last_Update__c</fullName>
    <description>Date and time of most recent update to the order.</description>
    <label>Last Update</label>
    <type>DateTime</type>
</CustomField>