NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Legacy_BluEdge_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Legacy_BluEdge_Expiration_Date__c</fullName>
    <label>Legacy BluEdge Expiration Date</label>
    <type>Date</type>
</CustomField>