NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_List_Amount_All_Related_Orders_Disc__c.field-meta.xml
<CustomField>
    <fullName>NATT_List_Amount_All_Related_Orders_Disc__c</fullName>
    <description>List Amount of ALL related Quotes (discountable only)</description>
    <label>NATT List Amount (All Related Orders)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>