NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_List_Amount_Disc__c.field-meta.xml
<CustomField>
    <fullName>NATT_List_Amount_Disc__c</fullName>
    <description>from the quote - the total net list amounts (discountable only)</description>
    <formula>SBQQ__Quote__r.NATT_List_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NATT List Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>