NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Mark_For_Special_Delivery_Instructi__c.field-meta.xml
<CustomField>
    <fullName>NATT_Mark_For_Special_Delivery_Instructi__c</fullName>
    <description>NATT</description>
    <label>Mark For Special Delivery Instructions</label>
    <type>TextArea</type>
</CustomField>