NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Market_Segment2__c.field-meta.xml
<CustomField>
    <fullName>NATT_Market_Segment2__c</fullName>
    <description>twin field from quote for natt</description>
    <label>Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>NATT_Product_Family__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>NATT_Market_Segment</valueSetName>
    </valueSet>
</CustomField>