NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Migrated_Ordered__c.field-meta.xml
<CustomField>
    <fullName>NATT_Migrated_Ordered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Means that this order was a quote that was a part of data migration and has an order that already exists in JDE</description>
    <label>Migrated Ordered</label>
    <type>Checkbox</type>
</CustomField>