NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Month__c.field-meta.xml
<CustomField>
    <fullName>NATT_Month__c</fullName>
    <description>Month *From Order Start Date</description>
    <formula>MONTH(EffectiveDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>