NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>NATT_Net_Amount__c</fullName>
    <description>from the originating quote, for calculating discounts</description>
    <formula>SBQQ__Quote__r.SBQQ__NetAmount__c</formula>
    <label>NATT Net Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>