NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Net_Amount_All_Related_Orders__c.field-meta.xml
<CustomField>
    <fullName>NATT_Net_Amount_All_Related_Orders__c</fullName>
    <description>the sum of the NATT net amounts for all orders - for calculating discounts</description>
    <label>NATT Net Amount (All Related Orders)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>