NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Net_Amount_All_Related_Orders_Disc__c.field-meta.xml
<CustomField>
    <fullName>NATT_Net_Amount_All_Related_Orders_Disc__c</fullName>
    <description>Net Amount of ALL related Quotes (discountable only)</description>
    <label>NATT Net Amount (All Related Orders)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>