NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Net_Amount_Disc__c.field-meta.xml
<CustomField>
    <fullName>NATT_Net_Amount_Disc__c</fullName>
    <description>from the originating quote, for calculating discounts (discountable only)</description>
    <formula>SBQQ__Quote__r.NATT_Net_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NATT Net Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>