NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Next_Status__c.field-meta.xml
<CustomField>
    <fullName>NATT_Next_Status__c</fullName>
    <label>Next Status</label>
    <summarizedField>OrderItem.NATT_JDE_SO_Last_Line_Status__c</summarizedField>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>