NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Number_of_Order_Products__c.field-meta.xml
<CustomField>
    <fullName>NATT_Number_of_Order_Products__c</fullName>
    <description>counts the number of order products to be used as a flow condition for NATT</description>
    <label>Number of Order Products</label>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>