NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Number_of_Units_Ordered__c.field-meta.xml
<CustomField>
    <fullName>NATT_Number_of_Units_Ordered__c</fullName>
    <description>counts the number of base units ordered</description>
    <label>Number of Units Ordered</label>
    <summarizedField>OrderItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OrderItem.NATT_Is_Base_Unit__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>OrderItem.OrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>