NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Number_of_Units_Ordered_Formatted__c.field-meta.xml
<CustomField>
    <fullName>NATT_Number_of_Units_Ordered_Formatted__c</fullName>
    <description>formatted for a screen flow with no decimals</description>
    <formula>NATT_Number_of_Units_Ordered__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Units</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>