NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Opp_Billing_Address_Id__c.field-meta.xml
<CustomField>
    <fullName>NATT_Opp_Billing_Address_Id__c</fullName>
    <description>NATT: used in order trigger to prevent query</description>
    <formula>Opportunity.NATT_Billing_Address__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NATT Opp Billing Address Id</label>
    <type>Text</type>
</CustomField>