NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Opportunity_Name__c</fullName>
    <formula>Opportunity.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>