NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Order_Status__c.field-meta.xml
<CustomField>
    <fullName>NATT_Order_Status__c</fullName>
    <description>NATT</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enter Order (Default Value)</fullName>
            </value>
            <value>
                <fullName>Sabrix Run</fullName>
            </value>
            <value>
                <fullName>Fulfillment Run</fullName>
            </value>
            <value>
                <fullName>Order Acknowledge</fullName>
            </value>
            <value>
                <fullName>Release Order for Shipment</fullName>
            </value>
            <value>
                <fullName>Credit Check for Shipment</fullName>
            </value>
            <value>
                <fullName>Ready to Print Pick Slip</fullName>
            </value>
            <value>
                <fullName>Ready for Picking</fullName>
            </value>
            <value>
                <fullName>Ready for Shipping</fullName>
            </value>
            <value>
                <fullName>Shipped</fullName>
            </value>
            <value>
                <fullName>Sabrix</fullName>
            </value>
            <value>
                <fullName>Invoicing</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Not Shipped</fullName>
            </value>
            <value>
                <fullName>Partially Shipped</fullName>
            </value>
            <value>
                <fullName>Awaiting Pricing</fullName>
            </value>
            <value>
                <fullName>Awaiting Customer Approval</fullName>
            </value>
            <value>
                <fullName>Customer Approved</fullName>
            </value>
            <value>
                <fullName>Enviado</fullName>
            </value>
            <value>
                <fullName>No Enviado</fullName>
            </value>
            <value>
                <fullName>Envío parcial</fullName>
            </value>
            <value>
                <fullName>Completo</fullName>
            </value>
            <value>
                <fullName>Cancelado</fullName>
            </value>
            <value>
                <fullName>Pending Confirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>