NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Order_Status_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_Order_Status_Code__c</fullName>
    <description>NATT</description>
    <label>Order Status Code</label>
    <length>225</length>
    <type>Text</type>
</CustomField>