NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Original_Order__c.field-meta.xml
<CustomField>
    <fullName>NATT_Original_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Amendment Orders</relationshipLabel>
    <relationshipName>Amendment_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>