NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Original_Quote__c.field-meta.xml
<CustomField>
    <fullName>NATT_Original_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>a link back to the original quote</description>
    <label>Original Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Orders (Original Quote)</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>