NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Payment_Instruction__c.field-meta.xml
<CustomField>
    <fullName>NATT_Payment_Instruction__c</fullName>
    <label>Payment Instruction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Wire Transfer</fullName>
            </value>
            <value>
                <fullName>Terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>