NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>NATT_Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_Payment_Terms</valueSetName>
    </valueSet>
</CustomField>