NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Per_Hour_Billing__c.field-meta.xml
<CustomField>
    <fullName>NATT_Per_Hour_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>twin field from quote - works with BluEdge</description>
    <label>Per Hour Billing</label>
    <type>Checkbox</type>
</CustomField>