NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Product_Family__c.field-meta.xml
<CustomField>
    <fullName>NATT_Product_Family__c</fullName>
    <label>Product Family</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_Product_Family</valueSetName>
    </valueSet>
</CustomField>