NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Product_Number_Change__c.field-meta.xml
<CustomField>
    <fullName>NATT_Product_Number_Change__c</fullName>
    <defaultValue>false</defaultValue>
    <description>for integration with boomi</description>
    <label>Product Number Change</label>
    <type>Checkbox</type>
</CustomField>