NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>NATT_Purchase_Order__c</fullName>
    <description>NATT</description>
    <label>PO #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>