NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Quote_Name__c.field-meta.xml
<CustomField>
    <fullName>NATT_Quote_Name__c</fullName>
    <description>The quote number/name of the quote that this order came from</description>
    <formula>SBQQ__Quote__r.Name</formula>
    <label>Quote Name</label>
    <type>Text</type>
</CustomField>