NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Quote_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>NATT_Quote_Record_Type__c</fullName>
    <description>for identifying types of quotes</description>
    <formula>SBQQ__Quote__r.NATT_Quote_Record_Type_Developer_Name__c</formula>
    <label>Quote Record Type</label>
    <type>Text</type>
</CustomField>