NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Region__c.field-meta.xml
<CustomField>
    <fullName>NATT_Region__c</fullName>
    <formula>TEXT(Account.NATT_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Region</label>
    <type>Text</type>
</CustomField>