NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Requested_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Requested_Ship_Date__c</fullName>
    <description>NATT</description>
    <label>Requested Ship Date</label>
    <type>Date</type>
</CustomField>