NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Shipment_Method__c.field-meta.xml
<CustomField>
    <fullName>NATT_Shipment_Method__c</fullName>
    <description>NATT</description>
    <label>Shipment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_Shipment_Method</valueSetName>
    </valueSet>
</CustomField>