NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Shipping_Address__c.field-meta.xml
<CustomField>
    <fullName>NATT_Shipping_Address__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>NATT</description>
    <label>NATT Shipping Address</label>
    <referenceTo>NATT_Address__c</referenceTo>
    <relationshipLabel>Orders (NATT Shipping Address)</relationshipLabel>
    <relationshipName>Orders1</relationshipName>
    <type>Lookup</type>
</CustomField>