NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Standard_Features__c.field-meta.xml
<CustomField>
    <fullName>NATT_Standard_Features__c</fullName>
    <description>Twin field from quote</description>
    <label>Standard Features</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>