NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Stock2__c.field-meta.xml
<CustomField>
    <fullName>NATT_Stock2__c</fullName>
    <formula>Opportunity.NATT_Stock__c = TRUE</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stock</label>
    <type>Checkbox</type>
</CustomField>