NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>NATT_Total_Discount__c</fullName>
    <formula>SBQQ__Quote__r.NATT_Total_Discount2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>