NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Transaction_Id__c.field-meta.xml
<CustomField>
    <fullName>NATT_Transaction_Id__c</fullName>
    <description>Used to hold the Authorize.net transaction Id if a CC payment is being used for the order.</description>
    <label>Transaction Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>