NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Unlock_Requested_Ship_Date__c.field-meta.xml
<CustomField>
    <fullName>NATT_Unlock_Requested_Ship_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unlock Requested Ship Date for Changes</label>
    <type>Checkbox</type>
</CustomField>