NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Unlock_Ship_To_Address_For_Changes__c.field-meta.xml
<CustomField>
    <fullName>NATT_Unlock_Ship_To_Address_For_Changes__c</fullName>
    <defaultValue>false</defaultValue>
    <description>keep off page layout</description>
    <label>Unlock Ship To Address for changes</label>
    <type>Checkbox</type>
</CustomField>