NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>NATT_Version_Number__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Version Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>