NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Warehouse__c.field-meta.xml
<CustomField>
    <fullName>NATT_Warehouse__c</fullName>
    <description>The Warehouse, or Depot, from which the order is shipping.</description>
    <label>Warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_Warehouse_Picklist</valueSetName>
    </valueSet>
</CustomField>