NATTQA-ENV/force-app/main/default/objects/Order/fields/NATT_Year__c.field-meta.xml
<CustomField>
    <fullName>NATT_Year__c</fullName>
    <description>Year *From Order Start Date</description>
    <formula>YEAR(EffectiveDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>