NATTQA-ENV/force-app/main/default/objects/Order/fields/Order_Community_Link__c.field-meta.xml
<CustomField>
    <fullName>Order_Community_Link__c</fullName>
    <formula>SUBSTITUTE($Label.Community_URL, &quot;/s&quot;,&quot;/&quot;) + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Community Link</label>
    <type>Text</type>
</CustomField>