NATTQA-ENV/force-app/main/default/objects/Order/fields/Order_Link__c.field-meta.xml
<CustomField>
    <fullName>Order_Link__c</fullName>
    <formula>$Label.NATT_Internal_SF_Link + Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Link</label>
    <type>Text</type>
</CustomField>