NATTQA-ENV/force-app/main/default/objects/Order/fields/ORIGINAL_ORDER_OWNER__c.field-meta.xml
<CustomField>
    <fullName>ORIGINAL_ORDER_OWNER__c</fullName>
    <inlineHelpText>Changed Quote owner as order owner to run the flow</inlineHelpText>
    <label>ORIGINAL ORDER OWNER</label>
    <length>50</length>
    <type>Text</type>
</CustomField>