NATTQA-ENV/force-app/main/default/objects/Order/fields/Quote_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Quote_Record_Type_Developer_Name__c</fullName>
    <formula>SBQQ__Quote__r.NATT_Quote_Record_Type_Developer_Name__c</formula>
    <label>Quote Record Type Developer Name</label>
    <type>Text</type>
</CustomField>