NATTQA-ENV/force-app/main/default/objects/Order/fields/Sent_Cancelled_to_SAP__c.field-meta.xml
<CustomField>
    <fullName>Sent_Cancelled_to_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will be set , when Cancelled CTBR Orders are sent to SAP</description>
    <label>Sent Cancelled to SAP</label>
    <type>Checkbox</type>
</CustomField>