NATTQA-ENV/force-app/main/default/objects/Order/fields/Sent_to_SAP__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be sent when Orders are sent to SAP in GET Requests.</description>
    <label>Sent to SAP</label>
    <type>Checkbox</type>
</CustomField>