NATTQA-ENV/force-app/main/default/objects/Order/fields/Shipping_Address_Name__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Address_Name__c</fullName>
    <formula>Contact_Point_Address__r.Name</formula>
    <label>Shipping Address Name</label>
    <type>Text</type>
</CustomField>