NATTQA-ENV/force-app/main/default/objects/Order/recordTypes/CONTAINER_GENSET_Order.recordType-meta.xml
<RecordType>
    <fullName>CONTAINER_GENSET_Order</fullName>
    <active>true</active>
    <label>CONTAINER GENSET Order</label>
</RecordType>