NATTQA-ENV/force-app/main/default/objects/Order/recordTypes/CONTAINER_NT_Order.recordType-meta.xml
<RecordType>
    <fullName>CONTAINER_NT_Order</fullName>
    <active>true</active>
    <label>CONTAINER NT Order</label>
</RecordType>