NATTQA-ENV/force-app/main/default/objects/Order/recordTypes/CTBR_Parts_Order.recordType-meta.xml
<RecordType>
    <fullName>CTBR_Parts_Order</fullName>
    <active>true</active>
    <label>CTBR Parts Order</label>
</RecordType>