NATTQA-ENV/force-app/main/default/objects/Order/recordTypes/CTBR_Units_Order.recordType-meta.xml
<RecordType>
    <fullName>CTBR_Units_Order</fullName>
    <active>true</active>
    <label>CTBR Units Order</label>
</RecordType>