NATTQA-ENV/force-app/main/default/objects/Order/recordTypes/CTM_Parts_Order.recordType-meta.xml
<RecordType>
    <fullName>CTM_Parts_Order</fullName>
    <active>true</active>
    <description>Record type for Carrier Transicold Mexico orders</description>
    <label>CTM Parts Order</label>
</RecordType>