NATTQA-ENV/force-app/main/default/objects/Order/recordTypes/CTM_Units_Order.recordType-meta.xml
<RecordType>
    <fullName>CTM_Units_Order</fullName>
    <active>true</active>
    <description>CTM Units Order</description>
    <label>CTM Units Order</label>
</RecordType>