NATTQA-ENV/force-app/main/default/objects/Order/recordTypes/NAC.recordType-meta.xml
<RecordType>
    <fullName>NAC</fullName>
    <active>true</active>
    <description>Record type created for NAC Orders</description>
    <label>NAC</label>
</RecordType>