NATTQA-ENV/force-app/main/default/objects/Order/recordTypes/NATT_Parts_Order.recordType-meta.xml
<RecordType>
    <fullName>NATT_Parts_Order</fullName>
    <active>true</active>
    <description>NATT Parts Order</description>
    <label>NATT Parts Order</label>
</RecordType>