NATTQA-ENV/force-app/main/default/objects/Order/recordTypes/NATT_Units_Amendment_Order.recordType-meta.xml
<RecordType>
    <fullName>NATT_Units_Amendment_Order</fullName>
    <active>true</active>
    <description>For Use with NATT Amendments for Unit Sales</description>
    <label>NATT Units Amendment Order</label>
</RecordType>