NATTQA-ENV/force-app/main/default/objects/Order/recordTypes/NATT_Units_Order.recordType-meta.xml
<RecordType>
    <fullName>NATT_Units_Order</fullName>
    <active>true</active>
    <description>NATT Units Order</description>
    <label>NATT Units Order</label>
</RecordType>