NATTQA-ENV/force-app/main/default/objects/Order/recordTypes/TES_Parts_Order.recordType-meta.xml
<RecordType>
    <fullName>TES_Parts_Order</fullName>
    <active>true</active>
    <label>TES Parts Order</label>
</RecordType>