NATTQA-ENV/force-app/main/default/objects/Order/validationRules/Cannot_cancel_order_with_non_stock_items.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_cancel_order_with_non_stock_items</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Quote_Record_Type_Developer_Name__c = &apos;MX_Units_Quote&apos;,
CTM_Quote_contains_Non_Stock_Item__c,  
ISPICKVAL(Status, &quot;Pending Cancellation&quot;))</errorConditionFormula>
    <errorMessage>You are not allowed to cancel order with non-stock item(s).</errorMessage>
</ValidationRule>