NATTQA-ENV/force-app/main/default/objects/Order/validationRules/CSR_cant_edit_NATTBilling_Shipping_Addre.validationRule-meta.xml
<ValidationRule>
    <fullName>CSR_cant_edit_NATTBilling_Shipping_Addre</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    $Profile.Name = &quot;NATT CSR Profile&quot;,
    OR(
        ISCHANGED(NATT_Billing_Address__c),
        ISCHANGED(NATT_Shipping_Address__c)
    )
)</errorConditionFormula>
    <errorMessage>You do not have permission to edit Billing or Shipping Address fields.</errorMessage>
</ValidationRule>